--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -239,7 +239,7 @@
     display:none;
 }
 .kpi-library>div{
-    position:relative;
+    position:fixed;
     border-radius:3px;
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
