--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -1,5 +1,5 @@
 <header>
-     <div class="user-portrait-background pull-left" data-open=true id="user-portrait-background">
+     <div class="user-portrait-background pull-left" state="close" id="user-portrait-background">
           <div class="user-portrait-brand"></div>
 
      </div>
