--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -1,24 +1,24 @@
 @font-face {
     font-family:"open-sans";
-    src: url("/assets/OpenSans-Regular.eot");
-    src: local("/assets/OpenSans-Regular Regular"),
-    local("/assets/OpenSans-Regular"),
-    url('/assets/OpenSans-Regular.woff') format('woff'),
-    url('/assets/OpenSans-Regular.ttf') format('truetype'),
-    url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
-    /*src: url("font/OpenSans-Regular.eot");*/
-    /*src: local("font/OpenSans-Regular Regular"),*/
-    /*local("font/OpenSans-Regular"),*/
-    /*url('font/OpenSans-Regular.woff') format('woff'),*/
-    /*url('font/OpenSans-Regular.ttf') format('truetype'),*/
-    /*url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
+    /*src: url("/assets/OpenSans-Regular.eot");*/
+    /*src: local("/assets/OpenSans-Regular Regular"),*/
+    /*local("/assets/OpenSans-Regular"),*/
+    /*url('/assets/OpenSans-Regular.woff') format('woff'),*/
+    /*url('/assets/OpenSans-Regular.ttf') format('truetype'),*/
+    /*url('/assets/OpenSans-Regular.svg#OpenSans-Regular') format('svg');*/
+    src: url("font/OpenSans-Regular.eot");
+    src: local("font/OpenSans-Regular Regular"),
+    local("font/OpenSans-Regular"),
+    url('font/OpenSans-Regular.woff') format('woff'),
+    url('font/OpenSans-Regular.ttf') format('truetype'),
+    url('font/OpenSans-Regular.svg#OpenSans-Regular') format('svg');
 }
 @font-face {
     font-family:"helve";
-    src:url("/assets/helveticaneueultralight.ttf"),
-    url("/assets/helveticaneueultralight.eot");
-    /*src:url("font/helveticaneueultralight.ttf"),*/
-    /*url("font/helveticaneueultralight.eot");*/
+    /*src:url("/assets/helveticaneueultralight.ttf"),*/
+    /*url("/assets/helveticaneueultralight.eot");*/
+    src:url("font/helveticaneueultralight.ttf"),
+    url("font/helveticaneueultralight.eot");
 }
 html{
     height:100%;
@@ -81,8 +81,8 @@ header{
     cursor:pointer;
 }
 .user-portrait-brand{
-    background:url("/assets/logo.png") no-repeat center bottom;
-    /*background:url("../images/logo.png") no-repeat center bottom;*/
+    /*background:url("/assets/logo.png") no-repeat center bottom;*/
+    background:url("../images/logo.png") no-repeat center bottom;
     width:150px;
     height:117px;
 }
@@ -128,8 +128,8 @@ nav ul li a span:nth-of-type(2){
     display:block;
     width:100%;
     height:52px;
-    background-image:url("/assets/nav-btn.png");
-    /*background-image:url("../images/nav-btn.png");*/
+    /*background-image:url("/assets/nav-btn.png");*/
+    background-image:url("../images/nav-btn.png");
     background-repeat:no-repeat;
 }
 /********************************************************* get start
