--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -68,9 +68,11 @@
     position:absolute;
     z-index:10;
     left:auto;
-    width:15%;
-    top:3px;
+    width:14%;
+    top:8px;
     display:none;
+    height:15px;
+    padding:5px;
 }
 /********************************************************************************************************* 添加 KPI
 *******************************************************************************************************************/
