--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -64,6 +64,9 @@
     color:rgba(0,0,0,0.3);
     font-size:13px;
 }
+.manage-kpi-target{
+    pointer-events:auto;
+}
 .manage-kpi-target input{
     position:absolute;
     z-index:10;
