--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <%@user_kpis.each_with_index do |kpi,i|
       value =KpiUnit.parse_entry_value(kpi.unit, entry.value)  if(entry=KpiEntriesHelper.get_kpi_entry_for_entry(kpi.user_kpi_item_id,@parsed_entry_at))
       percent=nil
@@ -17,12 +14,11 @@
                   <tr>
                       <td ><%= kpi.name%></td>
                       <td ><%= kpi.category_name%></td>
-                      <td ><%= kpi.direction%></td>
+                      <td ><%=KpiDirection.get_desc_by_value(kpi.direction)%></td>
                       <td >
                         <span class="entry-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target)%></span>
-                        <%= kpi.unit%>
                        </td>
-                      <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>" /></td>
+                      <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>"  value="<%=value%>" /></td>
                       <td ><%=percent%></td>
                   </tr>
                   <tr>
