--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -17,12 +17,12 @@
                   <tr>
                       <td ><%= kpi.name%></td>
                       <td ><%= kpi.category_name%></td>
-                      <td ><%= kpi.direction%></td>
+                      <td ><%= kpi.category_name%></td>
                       <td >
                         <span class="entry-target"><%= KpiUnit.parse_entry_value(kpi.unit, kpi.user_kpi_item_target)%></span>
-                        <%= kpi.unit%>
+                        $
                        </td>
-                      <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>" /></td>
+                      <td ><input type="text" class="entry-actual"  kpi_id="<%=kpi.id%>" user_kpi_item_id="<%= kpi.user_kpi_item_id%>"/></td>
                       <td ><%=percent%></td>
                   </tr>
                   <tr>
