--- a/app/views/layouts/admin_application.html.erb
+++ b/app/views/layouts/admin_application.html.erb
@@ -4,16 +4,22 @@
 		<title>IFEpm</title>
 		<%= stylesheet_link_tag    "application", :media => "all" %>
 		<%= javascript_include_tag "application" %>
+		<script type="text/javascript" src="/assets/jquery-ui-1.9.1.custom.min.js"></script>
+		<script type="text/javascript" src="/assets/jquery.file.upload/jquery.fileupload.js"></script>
+		<script type="text/javascript" src="/assets/brilliantech.ifemp.file.upload.js"></script>
 		<%= csrf_meta_tags %>
 	</head>
 	<body>
-	     <div>
-	          <ul>
-	               <li><a href="<%= admin_kpi_category_templates_path%>">KPICategory</a></li>
-                    <li><a href="<%= admin_kpi_templates_path%>">Kpi</a></li>
-	          </ul>
-	     </div>
-
+		<div>
+			<ul>
+				<li>
+					<a href="<%= admin_kpi_category_templates_path%>">KPICategory</a>
+				</li>
+				<li>
+					<a href="<%= admin_kpi_templates_path%>">Kpi</a>
+				</li>
+			</ul>
+		</div>
 
 		<div class="wrap-page">
 			<%= yield %>
