--- a/app/assets/stylesheets/_epm_base.css
+++ b/app/assets/stylesheets/_epm_base.css
@@ -63,6 +63,7 @@ body{
     right:0;
     left:0;
     overflow-y:hidden;
+    overflow-x:hidden;
 }
 /*********************************************************************************************************头部
 *******************************************************************************************************************/
