--- a/app/assets/stylesheets/wayne_sunny.css
+++ b/app/assets/stylesheets/wayne_sunny.css
@@ -6,6 +6,9 @@
 .normal-gray{
     color:#777;
 }
+.bold{
+    font-weight:bold
+}
 /*************************************************************  font format
 *********************************************************************************************************/
 p{
